# vibesop-py

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_INTEGRATION_COMPLETE.md  ARCHITECTURE_INTEGRATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CLI_OPTIMIZATION_PLAN.md  CLI_REFERENCE.md  COMPLETE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DESIGN_RETROSPECTIVE.md  DEVELOPMENT_LOG.md  FINAL_SESSION_REPORT.md  INTEGRATION_PROGRESS_REPORT.md  LICENSE  MANIFEST.in  MIGRATION_PLAN.md  Makefile  PHASE1_COMPLETE.md  PHASE1_RETROSPECTIVE.md  PHASE2_COMPLETION_REPORT.md  PHASE2_PLAN.md  PHASE3_COMPLETION_REPORT.md  PHILOSOPHY.md  PRODUCTION_READINESS_REVIEW.md  PROGRESS.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  README.md  README.zh-CN.md  README_UPDATE_SUMMARY.md  REFACTORING.md  ROADMAP.md  SESSION_SUMMARY.md  V2_RELEASE_COMPLETE.md  (+6 more)
.github/: CODEOWNERS  CREATE-RELEASE-GUIDE.md  PUSH-INSTRUCTIONS.md  RELEASE-CHECKLIST.md  V2.1.0-FINAL-SUMMARY.md  V2.1.0-RELEASE-NOTES.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill-request.yml  skill-share.yml
.github/workflows/: ci.yml  release.yml
.vibe/: PROJECT_CONTEXT.md  deep-code-review.md  docs-consistency-report.md  docs-fix-complete.md  experiment.yaml  findings.md  instincts.jsonl  instincts.jsonl.bak  preferences.json  preferences.json.backup  preferences.json.bak  progress.md  skill-routing.yaml  task_plan.md
.vibe/instincts/: decisions.json
.vibe/plans/: 2026-04-25-deep-review-optimization.md  2026-04-26-comprehensive-optimization.md  agent-runtime-platform-adaptation.md  next-optimization-plan.md  optimization_findings.md  optimization_progress.md  optimization_task_plan.md  post-review-optimization-plan.md  skillos-productization.md  v5-quality-sprint.md  v50-user-experience-closure.md  v51-skill-ecosystem-closure.md  v52-transparency-and-execution.md  v53-quality-and-ecosystem.md  v6-review-driven-optimization.md
.vibe/session/: project-c8ea356b2cac.json
.vibe/skills/: 请帮我优化这段代码的性能.md  请帮我检查代码中可能存在的安全问题.md  请帮我重构这段代码让它更清晰.md
.vibe/workflows/: config-deploy.yaml  example-workflow.yaml  security-review.yaml  skill-discovery.yaml
core/: registry.yaml
core/policies/: rule-deviation-tracking.yaml  skill-selection.yaml  task-routing.yaml
docs/: AUTO-LEARNING-GUIDE.md  AUTO-LEARNING-SYSTEM.md  AUTO-RECORD-GUIDE.md  CAPABILITY_COMPARISON.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  DEEP_REVIEW_REPORT.md  EXTERNAL_SKILLS_EXAMPLES.md  EXTERNAL_SKILLS_GUIDE.md  FINAL_ASSESSMENT.md  FINAL_HONEST_CHECK.md  FINAL_SESSION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLER_GAP_ANALYSIS.md  INSTALLER_IMPLEMENTATION_STATUS.md  KIMI_CLI_SETUP.md  KIMI_FINAL_FIX_COMPLETE.md  KIMI_REVIEW_FIXES_COMPLETE.md  MIGRATION_V3.md  OMX_GUIDE.md  PHILOSOPHY.md  POSITIONING.md  PRINCIPLES.md  PROGRESS_UPDATE.md  PROJECT_STATUS.md  PUBLISHING_CHECKLIST.md  QUICKSTART_DEVELOPERS.md  QUICKSTART_SKILL_INSTALLATION.md  QUICKSTART_USERS.md  QUICK_REFERENCE.md  README.md  RECOMMENDATIONS.md  ROADMAP.md  ROADMAP_INDEX.md  SECURITY.md  SESSION_SUMMARY.md  SKILLS_GUIDE.md  SKILL_ADD_INTEGRATION_COMPLETE.md  SKILL_LLM_CONFIG_GUIDE.md  (+15 more)
docs/architecture/: ARCHITECTURE.md  README.md  cross-platform-support.md  external-integrations.md  overview.md  routing-system.md  skill-runtime-interface.md  three-layers.md
docs/archive/: DEEP_REVIEW_REPORT_V2.md  DELIVERY_SUMMARY.md  EXTERNAL_SKILLS_COMPLETE.md  EXTERNAL_SKILLS_PROGRESS.md  EXTERNAL_SKILLS_STEP1_4_COMPLETE.md  IMPROVEMENT_COMPLETE.md  IMPROVEMENT_QUICKREF.md  IMPROVEMENT_ROADMAP.md  LLM_CONFIG_IMPLEMENTATION_SUMMARY.md  PHASE1_HONEST_REVIEW.md  PHASE1_P0_COMPLETE.md  PHASE1_REVIEW_REPORT.md  PHASE2_ARCHITECTURE_COMPLETE.md  PHASE2_P1_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_ROUTING_PROGRESS.md  PHASE4_COMPLETE.md  POSITIONING.md  QUICK_REFERENCE.md  README.md  REPAIR_PLAN.md  SKILL_UNDERSTANDING_SUMMARY.md  STATUS_ASSESSMENT.md  algorithms-guide.md  legacy-commands-migration.md
docs/dev/: CONTRIBUTING.md  PRODUCTION_READINESS_REVIEW.md  api-reference.md  architecture-overview.md  architecture.md  hooks-guide.md  releasing.md  roadmap-index.md  testing.md
docs/plans/: 2026-04-04-refactoring.md
docs/proposals/: skill-source-and-llm-config.md  skill-understanding-and-auto-config.md  smart-skill-installation.md
docs/semantic/: COMPARISON.md  DOCUMENTATION-CONSISTENCY-CHECK.md  IMPLEMENTATION-REVIEW.md  LIMITATIONS.md  PHASE2.1_COMPLETE.md  RELEASE.md  api.md  guide.md
docs/triggers/: PHASE2_COMPLETE.md  api.md  day10-e2e-testing.md  day11-12-docs.md  guide.md  patterns.md
docs/user/: CLI_REFERENCE.md  cli-reference.md  getting-started.md  troubleshooting.md  (+2 more)
examples/: USER_EXPERIENCE_COMPARISON.md  agent_integration_demo.py  skill_llm_config_demo.py  skill_understanding_demo.py  smart-install-demo.sh
memory/: instincts.yaml  overview.md  project-knowledge.md  session.md
scripts/: check_docs.py  cleanup.sh  sync-core.sh  sync-registry.py  verify-release.sh  verify-type-checking.md  verify-type-checking.sh  verify_cleanup.sh  vibe-install
tests/: conftest.py  test_ai_triage.py  test_atomic_writer.py  test_autopilot.py  test_cache.py  test_cascade.py  test_checkpoint.py  test_cli.py  test_config.py  test_config_optimization.py  test_doc_renderer.py  test_dynamic_renderer.py  test_execute.py  test_experiment.py  test_explicit_layer.py  test_external_tools.py  test_fuzzy_matcher.py  test_instinct.py  test_interactive.py  test_interview_ambiguity.py  test_llm.py  test_marker_files.py  test_memory.py  test_models.py  test_omx_cli.py  test_optimization_clustering.py  test_optimization_effectiveness.py  test_optimization_preference_boost.py  test_optimization_prefilter.py  test_preference.py  test_ralph_deslop.py  test_ralplan_deliberation.py  test_recommender.py  test_router_layers.py  test_routing_e2e.py  test_routing_integration.py  test_routing_optimization_integration.py  test_routing_performance.py  test_scenario_layer.py  test_security_enforced.py  (+10 more)
(+684 files in other folders)
